# src/routes/section.routes.js
@@ -1,14 +1,0 @@
-const express = require("express")
-
-const router = express.Router()
-
-const {
-    updateSection,
-    deleteSection
-} = require("../controllers/section.controller")
-
-router.put("/:id", updateSection)
-
-router.delete("/:id", deleteSection)
-
-module.exports = router
